--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-/Users/ffk-/Desktop/CollabCards/CollabCards.xcodeproj/project.xcworkspace/xcuserdata/ffk-.xcuserdatad/UserInterfaceState.xcuserstate
+GoogleService-Info.plist
